--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background: url('../images/background.svg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 body {
   margin: 0;
@@ -13,8 +19,16 @@ aside,
 details,
 figcaption,
 figure,
-footer,
-header,
+footer{
+  display: flex;
+  justify-content: left;
+  align-items: left;
+}
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 main,
 menu,
 nav,
@@ -42,10 +56,27 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  font-family: 'Press Start 2P';
+  color: white;
+  text-decoration: none;
 }
-a:active,
+a:active {
+  color:white;
+  text-decoration: none;
+}
 a:hover {
   outline-width: 0;
+  color:white;
+  text-decoration: none;
+}
+a:link
+{
+  color:white;
+  text-decoration: none;
+}
+a:visited {
+  color: white;
+  text-decoration: none;
 }
 abbr[title] {
   border-bottom: none;
